--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="author" href="https://hypensterisk.github.io/">
   <link rel="icon" href="/src/assets/logo-64.png">
   <link rel="license" href="https://raw.githubusercontent.com/hypensterisk/aes-encryption/main/LICENSE">
-  <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="/src/style.scss">
   <link rel="manifest" href="/src/assets/manifest.webmanifest">
   <title>AES Encryption</title>
   <noscript>You Have To Enable Javascript To Access This Page</noscript>
